--- a/styles.css
+++ b/styles.css
@@ -36,114 +36,66 @@ body {
 
  .frog-left-eye {
   position: absolute;
-  top: -26px;
-  left: -31px;
+  right: 0;
+  left: -75px;
+  top: -400px;
+  bottom: 0;
+  margin: auto;
+  background: #fff;
+  width: 60px;
+  height: 100px;
+  border: 1px solid #000;
+  border-radius: 35%;
   z-index: 1;
-  border-top-left-radius: 90px;
-  border-top-right-radius: 10px;
-  transform: rotate(-45deg);
-  border-left: 35px solid transparent;
-  border-right: 35px solid transparent;
-  border-bottom: 70px solid #5e5e5e;
 }
 
 .frog-right-eye {
   position: absolute;
-  top: -26px;
-  left: 163px;
+  right: 0;
+  left: 75px;
+  top: -400px;
+  bottom: 0;
+  margin: auto;
+  background: #fff;
+  width: 60px;
+  height: 100px;
+  border: 1px solid #000;
+  border-radius: 35%;
   z-index: 1;
-  transform: rotate(45deg);
-  border-top-left-radius: 90px;
-  border-top-right-radius: 10px;
-  border-left: 35px solid transparent;
-  border-right: 35px solid transparent;
-  border-bottom: 70px solid #5e5e5e;
-} */
+} 
 
-/* .frog-left-inner-eye {
-  position: absolute;
-  top: 22px;
-  left: -20px;
-  border-top-left-radius: 90px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 40%;
-  border-bottom-left-radius: 40%;
-  border-left: 20px solid transparent;
-  border-right: 20px solid transparent;
-  border-bottom: 40px solid #09090a;
+.frog-left-inner-eye {
+  /* position: absolute; */
+  right: 0;
+  left: 200px;
+  top: -200px;
+  bottom: 200;
+  margin: auto;
+  background: black;
+  width: 60px;
+  height: 50px;
+  border: 1px solid #000;
+  border-radius: 35%;
+  z-index: 1;
+  
 }
 
 .frog-right-inner-eye {
-  position: absolute;
-  top: 22px;
-  left: -20px;
-  border-top-left-radius: 90px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 40%;
-  border-bottom-left-radius: 40%;
-  border-left: 20px solid transparent;
-  border-right: 20px solid transparent;
-  border-bottom: 40px solid #09090a;
-} */
-
-.cat-left-eye {
-  position: absolute;
-  top: 54px;
-  left: 39px;
-  border-radius: 60%;
-  transform: rotate(25deg);
-  width: 30px;
-  height: 40px;
-  background-color: #000;
-}
-
-.cat-right-eye {
-  position: absolute;
-  top: 54px;
-  left: 134px;
-  border-radius: 60%;
-  transform: rotate(-25deg);
-  width: 30px;
-  height: 40px;
-  background-color: #000;
-}
-
-.cat-left-inner-eye {
-  position: absolute;
-  top: 8px;
-  left: 2px;
-  width: 10px;
-  height: 20px;
-  transform: rotate(10deg);
-  background-color: #fff;
-  border-radius: 60%;
-}
-
-.cat-right-inner-eye {
-  position: absolute;
-  top: 8px;
-  left: 18px;
-  transform: rotate(-5deg);
-  width: 10px;
-  height: 20px;
-  background-color: #fff;
-  border-radius: 60%;
-}
-
-.cat-nose {
-  position: absolute;
-  top: 108px;
-  left: 85px;
-  border-top-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%;
-  transform: rotate(180deg);
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-bottom: 20px solid #442c2c;
-}
-
-.cat-mouth div {
+ /* position: absolute; */
+ right: 0;
+ left: 200px;
+ top: -200px;
+ bottom: 200;
+ margin: auto;
+ background: black;
+ width: 60px;
+ height: 50px;
+ border: 1px solid #000;
+ border-radius: 35%;
+ z-index: 1;
+} 
+ 
+.frog-mouth div {
   width: 30px;
   height: 50px;
   border: 2px solid #000;
@@ -151,19 +103,33 @@ body {
   border-color: black transparent transparent transparent;
 }
 
-.cat-mouth-line-left {
+.frog-mouth-line-left {
   position: absolute;
   top: 88px;
   left: 74px;
   transform: rotate(170deg);
 }
 
-.cat-mouth-line-right {
+.frog-mouth-line-right {
   position: absolute;
   top: 88px;
   left: 91px;
   transform: rotate(165deg);
 }
+
+/* .lillypad {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background: linear-gradient(#11c22e  85%, #2e7433 100%);
+  width: 500px;
+  height: 180px;
+  border: 1px solid #000;
+  border-radius: 35%;
+} */
 
 /* .cat-whiskers-left div {
   width: 40px;
