--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,100 @@ body {
   border-radius: 35%;
 }
 
- .frog-left-eye {
+
+.frog-left-eye,
+.frog-right-eye {
+  position: absolute;
+  top: -200px;
+  width: 60px;
+  height: 100px;
+  background: #fff;
+  border: 1px solid #000;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.frog-left-eye {
+  right: 0;
+  left: -75px;
+  top: -400px;
+  bottom: 0;
+  margin: auto;
+  background: #fff;
+  width: 60px;
+  height: 100px;
+  border: 1px solid #000;
+  border-radius: 35%;
+}
+
+.frog-right-eye {
+  right: 0;
+  left: 75px;
+  top: -400px;
+  bottom: 0;
+  margin: auto;
+  background: #fff;
+  width: 60px;
+  height: 100px;
+  border: 1px solid #000;
+  border-radius: 35%;
+}
+
+.frog-left-inner-eye,
+.frog-right-inner-eye {
+  position: absolute;
+  background: black;
+  width: 50px;
+  height: 35px;
+  border-radius: 45%;
+
+  top: 35px; /* Adjust for vertical centering */
+}
+
+.frog-left-inner-eye {
+  left: 5px;
+}
+
+.frog-right-inner-eye {
+  left: 5px;
+}
+
+.frog-mouth div {
+  height: 50px;
+  border: 5px solid #000;
+  border-radius: 190% / 190px 150px 0 0;
+  border-color: black transparent transparent transparent;
+  transform: rotate(180deg);
+  bottom: 200px;
+}
+
+.eyebrows {
+  position: absolute;
+  width: 100%;
+  top: -500px;
+  left: 0;
+}
+
+.left-eyebrow,
+.right-eyebrow {
+  position: absolute;
+  width: 60px; /* Adjust the width as needed */
+  height: 20px; /* Adjust the height as needed */
+  background: black;
+  border-radius: 0 0 50px 50px;
+}
+
+.left-eyebrow {
+  left: -75px;
+  top: 50px; /* Adjust the position */
+}
+
+.right-eyebrow {
+  left: 75px;
+  top: 50px; /* Adjust the position */
+}
+
+ /* .frog-left-eye {
   position: absolute;
   right: 0;
   left: -75px;
@@ -65,7 +158,7 @@ body {
 } 
 
 .frog-left-inner-eye {
-  /* position: absolute; */
+ 
   right: 0;
   left: 200px;
   top: -200px;
@@ -81,7 +174,7 @@ body {
 }
 
 .frog-right-inner-eye {
- /* position: absolute; */
+
  right: 0;
  left: 200px;
  top: -200px;
@@ -94,27 +187,30 @@ body {
  border-radius: 35%;
  z-index: 1;
 } 
- 
+
 .frog-mouth div {
-  width: 30px;
   height: 50px;
-  border: 2px solid #000;
-  border-radius: 190%/190px 150px 0 0;
+  border: 5px solid #000;
+  border-radius: 190% / 190px 150px 0 0;
   border-color: black transparent transparent transparent;
+  transform: rotate(180deg);
+  bottom: 200px;
 }
 
-.frog-mouth-line-left {
+.eyebrows {
   position: absolute;
-  top: 88px;
-  left: 74px;
-  transform: rotate(170deg);
-}
-
-.frog-mouth-line-right {
-  position: absolute;
-  top: 88px;
-  left: 91px;
-  transform: rotate(165deg);
+  right: 0;
+  left: -75px;
+  top: -800px;
+  bottom: -300px;
+  margin: auto;
+  background: black;
+  border-radius: 190% / 190px 150px 0 0;
+  width: 75x;
+  height: 50px;
+  border: 1px solid #000;
+  
+  
 }
 
 /* .lillypad {
@@ -183,4 +279,4 @@ body {
   top: 134px;
   left: 109px;
   transform: rotate(3deg);
-} */
+} */ 
