added eyebrows and moving fly

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
   height: 180px;
   border: 1px solid #000;
   border-radius: 35%;
+  z-index: 1;
 }
 
 .frog-mouth {
@@ -80,7 +81,6 @@ body {
   width: 50px;
   height: 35px;
   border-radius: 45%;
-
   top: 35px; /* Adjust for vertical centering */
 }
 
@@ -93,7 +93,7 @@ body {
 }
 
 .frog-mouth div {
-  height: 50px;
+  height: 60px;
   border: 5px solid #000;
   border-radius: 190% / 190px 150px 0 0;
   border-color: black transparent transparent transparent;
@@ -103,29 +103,92 @@ body {
 
 .eyebrows {
   position: absolute;
-  width: 100%;
-  top: -500px;
+  width: 50%;
+  top: -70px; /* Position above the frog's eyes */
   left: 0;
 }
 
 .left-eyebrow,
 .right-eyebrow {
+
+  height: 160px;
+  border: 5px solid #000;
+  border-color: black transparent transparent transparent;
+  bottom: 100px;
   position: absolute;
-  width: 60px; /* Adjust the width as needed */
-  height: 20px; /* Adjust the height as needed */
-  background: black;
-  border-radius: 0 0 50px 50px;
+  width: 60px; 
+  height: 10px; 
+  border-radius: 0 0 20px 20px; 
 }
 
 .left-eyebrow {
-  left: -75px;
-  top: 50px; /* Adjust the position */
+  left: 60px;
+  top: 100; 
+  z-index: 1;
+  transform: rotate(180deg);
 }
 
 .right-eyebrow {
-  left: 75px;
-  top: 50px; /* Adjust the position */
+  left: 135px;
+  top: 100; /* Adjust the position */
+  z-index: 1;
+  transform: rotate(180deg);
 }
+
+.lilipad {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 150px;
+  bottom: 0;
+  margin: auto;
+  background: green;
+  width: 550px;
+  height: 100px;
+  border: 1px solid #000;
+  border-radius: 35%;
+}
+
+/* styles.css */
+
+body {
+  margin: 0;
+  overflow: hidden; /* Ensure the fly doesn't scroll out of view */
+  background-color: #f0f0f0; /* Light background for contrast */
+}
+
+.fly {
+  width: 20px;
+  height: 20px;
+  background-color: black;
+  border-radius: 50%; /* Make the fly circular */
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: moveFly 10s linear infinite;
+  z-index: 1;
+}
+
+@keyframes moveFly {
+  0% {
+      transform: translate(0, 0);
+  }
+  25% {
+      transform: translate(calc(50vw - 20px), calc(25vh - 20px));
+  }
+  50% {
+      transform: translate(calc(75vw - 20px), calc(75vh - 20px));
+  }
+  75% {
+      transform: translate(calc(25vw - 20px), calc(50vh - 20px));
+  }
+  100% {
+      transform: translate(0, 0);
+  }
+}
+
+
+
 
  /* .frog-left-eye {
   position: absolute;
