--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
 }
@@ -157,6 +158,77 @@ body {
  
 }
 
+.foot-one {
+  display:flex;
+  align-items: center;
+  position: absolute;
+  background: linear-gradient(#11c22e  85%, #2e7433 100%);
+  width: 100px;
+  height: 55px;
+  border: 1px solid #000;
+  border-radius: 35%;
+  right: 0;
+  left: -280px;
+  top: 500px;
+  bottom: 400;
+  margin: auto;
+  z-index: 1;
+}
+
+.foot-two {
+  display:flex;
+  align-items: center;
+  position: absolute;
+  background: linear-gradient(#11c22e  85%, #2e7433 100%);
+  width: 75px;
+  height: 55px;
+  border: 1px solid #000;
+  border-radius: 35%;
+  right: 0;
+  left: -80px;
+  top: 500px;
+  bottom: 400;
+  margin: auto;
+  z-index: 1;
+
+}
+
+.foot-three {
+  display:flex;
+  align-items: center;
+  position: absolute;
+  background: linear-gradient(#11c22e  85%, #2e7433 100%);
+  width: 75px;
+  height: 55px;
+  border: 1px solid #000;
+  border-radius: 35%;
+  right: 0;
+  left: 85px;
+  top: 500px;
+  bottom: 400;
+  margin: auto;
+  z-index: 1;
+
+}
+ .foot-four {
+  display:flex;
+  align-items: center;
+  position: absolute;
+  background: linear-gradient(#11c22e  85%, #2e7433 100%);
+  width: 100px;
+  height: 55px;
+  border: 1px solid #000;
+  border-radius: 35%;
+  right: 0;
+  left: 280px;
+  top: 500px;
+  bottom: 400;
+  margin: auto;
+  z-index: 1;
+
+} 
+
+
 .fly {
   width: 20px;
   height: 20px;
@@ -253,6 +325,9 @@ body {
   transform: rotate(15deg);
   z-index: 1;
 }
+
+
+
 
  /* .frog-left-eye {
   position: absolute;
